# video-make

./: .gitignore  2026-04-23-dramaforge-research.md  2026-04-23.md  DESIGN.md  README.md  TEST_REPORT.md  dramaforge-priority-list.md  toimprove.txt  优化点.txt
.claude/: settings.local.json
backend/: main.py  requirements.txt
backend/api/: deps.py  ws_manager.py
backend/data/: .keyfile  dramaforge.db
backend/db/: database.py  models.py
backend/prompts/: breakdown.txt  breakdown_episode_detail.txt  breakdown_phase1.txt  breakdown_supplement.txt  (+2 more)
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
prompt-templates/: README.md  分镜生成方式详解.md
prompt-templates_bak/: README.md  ai-animation-workflow.md  ai-video-platform-official-resources.md  bilibili-ai-storyboard-resources.md  community-tutorial-platforms.md  comprehensive-prompt-libraries.md  free-prompt-platforms-storyboard-animation.md  github-chinese-storyboard-projects.md  github-free-storyboard-resources.md  keyword-coverage-summary.md  official-model-prompts.md  platform-specific-templates.md  prompt-engineering-guide.md  seedance-video-prompts-supplement.md  storyboard-prompt-library.md  storyboard-script-template.md  studiobinder-storyboard-cases.md  traditional-storyboard-templates.md  uisdc-professional-resources.md
scripts/: dev.sh  start-backend.ps1  start-frontend.ps1
skills/: video storyboard director.md
(+150 files in other folders)
